Add basic image display feature.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,20 +2,23 @@ cmake_minimum_required(VERSION 3.0)
 project(TinyMoeFace_Research1_ARAP)
 
 set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTOUIC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
 
-# Tell CMake to run moc when necessary:
-set(CMAKE_AUTOMOC ON)
-# As moc files are generated in the binary dir, tell CMake
-# to always look for includes there:
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
+find_package( OpenCV REQUIRED )
+include_directories( ${OpenCV_INCLUDE_DIRS} )
 
-# Widgets finds its own dependencies.
+include_directories(
+  ${Qt5Widgets_INCLUDE_DIRS} ${Qt5Core_INCLUDE_DIRS} ${Qt5Gui_INCLUDE_DIRS})
+
+add_definitions(${Qt5Widgets_DEFINITIONS})
+
 find_package(Qt5Widgets REQUIRED)
 
-add_executable(${PROJECT_NAME} main.cpp)
+add_executable(${PROJECT_NAME} main.cpp DeformDialog.cpp DeformWidget.cpp)
+add_library(DeformDialog.ui DeformDialog.ui)
 
-qt5_use_modules(${PROJECT_NAME} Widgets)
+qt5_use_modules(${PROJECT_NAME} Widgets Gui Core)
