Some attempts on auto edge detection. Begin working SVG edge mark.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,6 @@ find_package(Qt5Widgets REQUIRED)
 
 add_library(DeformDialog.ui DeformDialog.ui)
 
-add_executable(${PROJECT_NAME} main.cpp DeformDialog.cpp DeformWidget.cpp)
+add_executable(${PROJECT_NAME} main.cpp DeformDialog.cpp DeformWidget.cpp FaceOutlineReader.cpp)
 qt5_use_modules(${PROJECT_NAME} Widgets Gui Core)
 target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
