Add CGAL library.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,10 @@ include_directories(${EIGEN3_INCLUDE_DIR})
 find_package( OpenCV REQUIRED )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 
+find_package(CGAL REQUIRED)
+include( ${CGAL_USE_FILE} )
+include_directories( ${CGAL_INCLUDE_DIRS} )
+
 include_directories(
   ${Qt5Widgets_INCLUDE_DIRS} ${Qt5Core_INCLUDE_DIRS} ${Qt5Gui_INCLUDE_DIRS})
 
@@ -20,6 +24,7 @@ find_package(Qt5Widgets REQUIRED)
 
 add_library(DeformDialog.ui DeformDialog.ui)
 
-add_executable(${PROJECT_NAME} main.cpp DeformDialog.cpp DeformWidget.cpp FaceOutlineReader.cpp)
+add_executable(${PROJECT_NAME} main.cpp DeformDialog.cpp DeformWidget.cpp FaceOutlineReader.cpp CGALTriangulator.cpp)
 qt5_use_modules(${PROJECT_NAME} Widgets Gui Core)
 target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
+target_link_libraries(${PROJECT_NAME} ${CGAL_LIBS})
