--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,8 @@ find_package(Qt5Widgets REQUIRED)
 
 add_library(DeformDialog.ui DeformDialog.ui)
 
-add_executable(${PROJECT_NAME} main.cpp DeformDialog.cpp DeformWidget.cpp FaceOutlineReader.cpp CGALTriangulator.cpp)
+add_executable(${PROJECT_NAME} main.cpp DeformDialog.cpp DeformWidget.cpp
+    FaceOutlineReader.cpp CGALTriangulator.cpp CGALUtil.cpp)
 qt5_use_modules(${PROJECT_NAME} Widgets Gui Core)
 target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
 target_link_libraries(${PROJECT_NAME} ${CGAL_LIBS})
