Add a abstract deformer class. Add a possible simpler deformer.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,8 +27,10 @@ find_package(Qt5Multimedia REQUIRED)
 add_library(DeformDialog.ui DeformDialog.ui)
 
 add_executable(${PROJECT_NAME} main.cpp DeformDialog.cpp DeformWidget.cpp
-    FaceOutlineReader.cpp CGALTriangulator.cpp CGALUtil.cpp ARAPDeformer.cpp
-    SimpleCameraSurface.cpp FaceAlignmentWidget.cpp FaceX/FaceX/fern.cpp FaceX/FaceX/utils.cpp
+    FaceOutlineReader.cpp CGALTriangulator.cpp CGALUtil.cpp
+    AbstractDeformer.cpp ARAPDeformer.cpp PhysicsDeformer.cpp
+    SimpleCameraSurface.cpp FaceAlignmentWidget.cpp
+    FaceX/FaceX/fern.cpp FaceX/FaceX/utils.cpp
     FaceX/FaceX/face_x.cpp FaceX/FaceX/regressor.cpp)
 qt5_use_modules(${PROJECT_NAME} Multimedia Widgets Gui Core)
 target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
